--- a/index.html
+++ b/index.html
@@ -18,13 +18,8 @@
         <button type="submit">Get Weather</button>
     </form>
 
-    <div class="weatherCard">
-        <h1 class="cityDisplay">Amsterdam</h1>
-        <p class="tempDisplay">56°C</p>
-        <p class="humidityDisplay">75%</p>
-        <p class="descDisplay">Cloudy skies</p>
-        <p class="weatherEmoji">☁️</p>
-        <p class="errorDisplay">Please enter a city</p>
+    <div class="weatherCard" style="display: none">
+        
     </div>
 
 </body>
